--- a/app/src/main/res/layout/activity_league.xml
+++ b/app/src/main/res/layout/activity_league.xml
@@ -64,11 +64,12 @@
             android:text="@string/next"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/button3"
+            android:id="@+id/leagueNextBtn"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/imageView3"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="@+id/imageView3"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView3" android:background="@drawable/swoosh_button"
-            android:fontFamily="@font/montserrat" android:textColor="@android:color/white"/>
+            android:fontFamily="@font/montserrat" android:textColor="@android:color/white"
+            android:onClick="leagueNextClicked"/>
 </android.support.constraint.ConstraintLayout>
